:bug: fix Welcome component on mobile size

--- a/src/components/home/HomeWelcome/HomeWelcome.module.scss
+++ b/src/components/home/HomeWelcome/HomeWelcome.module.scss
@@ -2,28 +2,38 @@
 
 .Welcome {
   position: relative;
-  height: 600px;
+  height: 400px;
   background-image: linear-gradient(180deg, #0c0c0e 0%, #0c0c0e 0.01%, rgba(18, 18, 21, 0.1) 100%),
     url('/images/welcome-bg.jpeg');
   background-size: cover;
   background-position: center;
+  @include media($SCREEN_TABLET) {
+    height: 600px;
+  }
 
   &__inner {
     position: absolute;
-    left: 0;
+    left: 20px;
     top: 55%;
     transform: translateY(-50%);
-    width: 600px;
+    width: calc(100% - 40px);
     background-color: $BLACK;
     padding: 35px 40px;
+    @include media($SCREEN_TABLET) {
+      max-width: 600px;
+      left: 0;
+    }
 
     &_text {
       font-family: $SECOND_FONT;
-      @include text(rem(40), 400, $WHITE);
+      @include text(rem(20), 400, $WHITE);
       line-height: 125%;
       letter-spacing: 3px;
       text-align: center;
       text-transform: uppercase;
+      @include media($SCREEN_TABLET) {
+        font-size: rem(40);
+      }
     }
   }
 }
